updated added checks in login methods

--- a/PMS-PropertyHapa.Staff/Views/Auth/Login.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Auth/Login.cshtml
@@ -99,7 +99,7 @@
 
 
 <form class="theme-form login-form needs-validation" novalidate="" method="post">
-    <h4>Login</h4>
+    <h4>Staff Login</h4>
     <h6>Welcome back! Log in to your account.</h6>
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
