update code owner

--- a/PMS-PropertyHapa.Admin/Views/Shared/_IdentityLayout.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Shared/_IdentityLayout.cshtml
@@ -49,17 +49,17 @@
     <!-- Loader ends-->
     <!-- page-wrapper Start-->
     <section>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-xl-7 order-1"><img class="bg-img-cover bg-center" src="~/Dashboard/assets/images/login/1.jpg" alt="looginpage"></div>
-          <div class="col-xl-5 p-0">
-            <div class="login-card">
-                @RenderBody()
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xl-7"><img class="bg-img-cover bg-center" src="~/Dashboard/assets/images/login/2.jpg" alt="looginpage"></div>
+                <div class="col-xl-5 p-0">
+                    <div class="login-card">
+                        @RenderBody()
 
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
     </section>
     <!-- page-wrapper end-->
     <script>
