--- a/PMS-PropertyHapa/Views/Home/Index.cshtml
+++ b/PMS-PropertyHapa/Views/Home/Index.cshtml
@@ -48,8 +48,9 @@
         <div class="container-fluid p-0 m-0">
             <div class="comingsoon comingsoon-bgimg">
                 <div class="comingsoon-inner text-center">
-                    <img class="img-fluid for-light" src="~/Dashboard/assets/images/logo/logo.png" alt="looginpage" style="width: 174px;">
-                    <h5>PROPERTY HAPA ARE COMING SOON</h5>
+                    <img class="img-fluid for-light" src="~/Dashboard/assets/images/logo/logo.png" alt="looginpage" style="width: 174px;padding-bottom: 23px;">
+                    <h4>Property Management Software</h4>
+                    <h6>COMING SOON.</h6>
                     <div class="countdown" id="clockdiv">
                         <ul>
                             <li><span class="time" id="days"></span><span class="title">days</span></li>
