--- a/PMS-PropertyHapa.Owner/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Owner/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <meta name="author" content="pixelstrap">
     <link rel="icon" href="~/Dashboard/assets/images/logo/favicon-icon.png" type="image/x-icon">
     <link rel="shortcut icon" href="~/Dashboard/assets/images/logo/favicon-icon.png" type="image/x-icon">
-    <title>Zeta admin dashboard </title>
+    <title>Owner Portal</title>
     <!-- Google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
@@ -88,12 +88,11 @@
                             <a class="navbar-brand" href="javascript:void(0)"> <img class="img-fluid" src="~/Dashboard/assets/images/logo/logo_dark.png" alt=""></a>
                             <ul class="landing-menu nav nav-pills">
                                 <li class="nav-item menu-back">back<i class="fa fa-angle-right"></i></li>
-                                <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#framework">Frameworks</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#core-feature">Core Feature</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#Applications">Applications</a></li>
-                                <li class="nav-item"><a class="nav-link" href="http://docs.pixelstrap.com/zeta/document/">Documentation</a></li>
-                                <li class="nav-item"><a class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLSe6hKUXw_By-pg7yabL0FxoTM02ZPTxoXy8PE3yboRuUCuyeA/viewform?">Hire US</a></li>
+                                <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Announcements")">HOME</a></li>
+                                <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Payment")">PAYMENTS</a></li>
+                                <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Insurance")">INSURANCE</a></li>
+                                <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Request")">REQUESTS</a></li>
+                                <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Announcements")">ANNOUNCEMENTS</a></li>
                             </ul>
                             <div class="buy-block">
                                 <div class="toggle-menu"><i class="fa fa-bars"></i></div>
