--- a/PMS-PropertyHapa.Tenant/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Tenant/Views/Shared/_Layout.cshtml
@@ -88,7 +88,7 @@
                             <a class="navbar-brand" href="javascript:void(0)"> <img class="img-fluid" src="~/Dashboard/assets/images/logo/logo_dark.png" alt=""></a>
                             <ul class="landing-menu nav nav-pills">
                                 <li class="nav-item menu-back">back<i class="fa fa-angle-right"></i></li>
-                                <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Announcements")">HOME</a></li>
+                                <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Home")">HOME</a></li>
                                 <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Payment")">PAYMENTS</a></li>
                                 <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Insurance")">INSURANCE</a></li>
                                 <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Request")">REQUESTS</a></li>
