--- a/PMS-PropertyHapa.Owner/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Owner/Views/Shared/_Layout.cshtml
@@ -28,6 +28,11 @@
     <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/vendors/scrollbar.css">
     <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/vendors/animate.css">
     <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/vendors/chartist.css">
+    <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/vendors/scrollbar.css">
+    <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/vendors/datatables.css">
+    <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/vendors/datatable-extension.css">
+
+
 
     <!-- Plugins css Ends-->
     <!-- Bootstrap css-->
@@ -131,7 +136,6 @@
     <script src="~/Dashboard/assets/js/landing_sticky.js"></script>
     <script src="~/Dashboard/assets/js/landing.js"></script>
     <script src="~/Dashboard/assets/js/script.js"></script>
-
     <script src="~/Dashboard/assets/js/chart/knob/knob.min.js"></script>
     <script src="~/Dashboard/assets/js/chart/knob/knob-chart.js"></script>
     <script src="~/Dashboard/assets/js/chart/apex-chart/apex-chart.js"></script>
@@ -157,9 +161,29 @@
     <script src="~/Dashboard/assets/js/counter/jquery.waypoints.min.js"></script>
     <script src="~/Dashboard/assets/js/counter/jquery.counterup.min.js"></script>
     <script src="~/Dashboard/assets/js/counter/counter-custom.js"></script>
-    <script src="~/Dashboard/assets/js/owlcarousel/owl.carousel.js"></script>
-    <script src="~/Dashboard/assets/js/owlcarousel/owl-custom.js"></script>
     <script src="~/Dashboard/assets/js/dashboard/dashboard_2.js"></script>
     <script src="~/Dashboard/assets/js/tooltip-init.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatables/jquery.dataTables.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/dataTables.buttons.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/jszip.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/buttons.colVis.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/pdfmake.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/vfs_fonts.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/dataTables.autoFill.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/dataTables.select.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/buttons.bootstrap4.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/buttons.html5.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/buttons.print.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/dataTables.bootstrap4.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/dataTables.responsive.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/responsive.bootstrap4.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/dataTables.keyTable.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/dataTables.colReorder.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/dataTables.fixedHeader.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/dataTables.rowReorder.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/dataTables.scroller.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/custom.js"></script>
+    <script src="~/Dashboard/assets/js/theme-customizer/customizer.js"></script>
+
 </body>
 </html>
