--- a/PMS-PropertyHapa.Tenant/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Tenant/Views/Shared/_Layout.cshtml
@@ -25,8 +25,12 @@
     <!-- Feather icon-->
     <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/vendors/feather-icon.css">
     <!-- Plugins css start-->
+    <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/vendors/scrollbar.css">
     <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/vendors/animate.css">
-    <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/vendors/owlcarousel.css">
+    <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/vendors/chartist.css">
+    <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/vendors/scrollbar.css">
+    <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/vendors/datatables.css">
+    <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/vendors/datatable-extension.css">
     <!-- Plugins css Ends-->
     <!-- Bootstrap css-->
     <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/vendors/bootstrap.css">
@@ -71,6 +75,10 @@
             white-space: nowrap;
             padding-bottom: 0;
         }
+
+        .static-widget {
+            margin-bottom: 0px !important;
+        }
     </style>
 </head>
 <body class="landing-wrraper">
@@ -89,7 +97,7 @@
                             <ul class="landing-menu nav nav-pills">
                                 <li class="nav-item menu-back">back<i class="fa fa-angle-right"></i></li>
                                 <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Home")">HOME</a></li>
-                                <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Payment")">PAYMENTS</a></li>
+                                <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Payments")">PAYMENTS</a></li>
                                 <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Insurance")">INSURANCE</a></li>
                                 <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Request")">REQUESTS</a></li>
                                 <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Announcements")">ANNOUNCEMENTS</a></li>
@@ -125,5 +133,53 @@
     <script src="~/Dashboard/assets/js/landing_sticky.js"></script>
     <script src="~/Dashboard/assets/js/landing.js"></script>
     <script src="~/Dashboard/assets/js/script.js"></script>
+    <script src="~/Dashboard/assets/js/chart/knob/knob.min.js"></script>
+    <script src="~/Dashboard/assets/js/chart/knob/knob-chart.js"></script>
+    <script src="~/Dashboard/assets/js/chart/apex-chart/apex-chart.js"></script>
+    <script src="~/Dashboard/assets/js/chart/apex-chart/stock-prices.js"></script>
+    <script src="~/Dashboard/assets/js/notify/bootstrap-notify.min.js"></script>
+    <script src="~/Dashboard/assets/js/dashboard/default.js"></script>
+    <script src="~/Dashboard/assets/js/datepicker/date-picker/datepicker.js"></script>
+    <script src="~/Dashboard/assets/js/datepicker/date-picker/datepicker.en.js"></script>
+    <script src="~/Dashboard/assets/js/datepicker/date-picker/datepicker.custom.js"></script>
+    <script src="~/Dashboard/assets/js/photoswipe/photoswipe.min.js"></script>
+    <script src="~/Dashboard/assets/js/photoswipe/photoswipe-ui-default.min.js"></script>
+    <script src="~/Dashboard/assets/js/photoswipe/photoswipe.js"></script>
+    <script src="~/Dashboard/assets/js/typeahead/handlebars.js"></script>
+    <script src="~/Dashboard/assets/js/typeahead/typeahead.bundle.js"></script>
+    <script src="~/Dashboard/assets/js/typeahead/typeahead.custom.js"></script>
+    <script src="~/Dashboard/assets/js/typeahead-search/handlebars.js"></script>
+    <script src="~/Dashboard/assets/js/typeahead-search/typeahead-custom.js"></script>
+    <script src="~/Dashboard/assets/js/height-equal.js"></script>
+    <script src="~/Dashboard/assets/js/chart/chartjs/chart.min.js"></script>
+    <script src="~/Dashboard/assets/js/chart/chartist/chartist.js"></script>
+    <script src="~/Dashboard/assets/js/chart/chartist/chartist-plugin-tooltip.js"></script>
+    <script src="~/Dashboard/assets/js/prism/prism.min.js"></script>
+    <script src="~/Dashboard/assets/js/counter/jquery.waypoints.min.js"></script>
+    <script src="~/Dashboard/assets/js/counter/jquery.counterup.min.js"></script>
+    <script src="~/Dashboard/assets/js/counter/counter-custom.js"></script>
+    <script src="~/Dashboard/assets/js/dashboard/dashboard_2.js"></script>
+    <script src="~/Dashboard/assets/js/tooltip-init.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatables/jquery.dataTables.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/dataTables.buttons.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/jszip.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/buttons.colVis.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/pdfmake.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/vfs_fonts.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/dataTables.autoFill.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/dataTables.select.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/buttons.bootstrap4.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/buttons.html5.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/buttons.print.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/dataTables.bootstrap4.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/dataTables.responsive.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/responsive.bootstrap4.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/dataTables.keyTable.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/dataTables.colReorder.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/dataTables.fixedHeader.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/dataTables.rowReorder.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/dataTables.scroller.min.js"></script>
+    <script src="~/Dashboard/assets/js/datatable/datatable-extension/custom.js"></script>
+    <script src="~/Dashboard/assets/js/theme-customizer/customizer.js"></script>
 </body>
 </html>
