--- a/PMS-PropertyHapa.Owner/Views/Home/Index.cshtml
+++ b/PMS-PropertyHapa.Owner/Views/Home/Index.cshtml
@@ -1,6 +1,9 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿
+@{
+    ViewData["Title"] = "Home";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 <div class="page-body">
     <div class="container default-dash">
         <div class="row">
