--- a/PMS-PropertyHapa.Owner/Views/Shared/_IdentityLayout.cshtml
+++ b/PMS-PropertyHapa.Owner/Views/Shared/_IdentityLayout.cshtml
@@ -9,7 +9,7 @@
     <meta name="author" content="pixelstrap">
     <link rel="icon" href="~/Dashboard/assets/images/logo/favicon-icon.png" type="image/x-icon">
     <link rel="shortcut icon" href="~/Dashboard/assets/images/logo/favicon-icon.png" type="image/x-icon">
-    <title>Property Hapa</title>
+    <title>Owner Property Hapa</title>
     <!-- Google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
