--- a/PMS-PropertyHapa.Tenant/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Tenant/Views/Shared/_Layout.cshtml
@@ -93,7 +93,7 @@
                 <div class="row">
                     <div class="col-12">
                         <nav class="navbar navbar-light p-0" id="navbar-example2">
-                            <a class="navbar-brand" href="javascript:void(0)"> <img class="img-fluid" src="~/Dashboard/assets/images/logo/logo_dark.png" alt=""></a>
+                            <a class="navbar-brand" href="@Url.Action("Index","Home")"> <img class="img-fluid" src="~/Dashboard/assets/images/logo/logo.png" alt="" style="width: 108px;height: 56px;padding-left: 9px;"></a>
                             <ul class="landing-menu nav nav-pills">
                                 <li class="nav-item menu-back">back<i class="fa fa-angle-right"></i></li>
                                 <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Home")">HOME</a></li>
@@ -101,6 +101,7 @@
                                 <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Insurance")">INSURANCE</a></li>
                                 <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Request")">REQUESTS</a></li>
                                 <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Announcements")">ANNOUNCEMENTS</a></li>
+                                <li class="nav-item"><a class="nav-link" href="@Url.Action("Logout","Auth")">Logout</a></li>
                             </ul>
                             <div class="buy-block">
                                 <div class="toggle-menu"><i class="fa fa-bars"></i></div>
