--- a/PMS-PropertyHapa.Tenant/Views/Auth/Login.cshtml
+++ b/PMS-PropertyHapa.Tenant/Views/Auth/Login.cshtml
@@ -42,13 +42,17 @@
                     type: 'POST',
                     data: formData,
                     success: function (response) {
-                        if (response == true) {
+                        if (response.success) {
+                            localStorage.setItem('userId', response.result);
+                            if (response.organization && response.organization.logo) {
+                                localStorage.setItem('organizationLogo', response.organization.logo);
+                            }
                             var Toast = Swal.mixin({ toast: true, position: 'top-end', showConfirmButton: false, progressBar: true, timer: 3000 });
-                            Toast.fire({ icon: 'success', title: 'You are logged in!' });
+                            Toast.fire({ icon: 'success', title: response.message });
                             window.location.href = '@Url.Action("Index", "Home")';
                         } else {
                             var Toast = Swal.mixin({ toast: true, position: 'top-end', showConfirmButton: false, progressBar: true, timer: 3000 });
-                            Toast.fire({ icon: 'success', title: response.message });
+                            Toast.fire({ icon: 'error', title: response.message });
                         }
                     },
                     error: function (xhr, status, error) {
