--- a/PMS-PropertyHapa.Owner/Views/Auth/Login.cshtml
+++ b/PMS-PropertyHapa.Owner/Views/Auth/Login.cshtml
@@ -42,8 +42,10 @@
                     type: 'POST',
                     data: formData,
                     success: function (response) {
+                    
                         if (response.success) {
                             debugger;
+                            localStorage.setItem('userId', response.id);
                             if (response.organization && response.organization.logo) {
                                 localStorage.setItem('organizationLogo', response.organization.logo);
                             }
