--- a/PMS-PropertyHapa.Owner/Views/Applications/AddApplication.cshtml
+++ b/PMS-PropertyHapa.Owner/Views/Applications/AddApplication.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewData["Title"] = "AddApplication";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/ManagePropertyforOwnerLayout.cshtml";
 }
 
 <h1>AddApplication</h1>
