--- a/PMS-PropertyHapa.Owner/Views/Applications/ViewApplication.cshtml
+++ b/PMS-PropertyHapa.Owner/Views/Applications/ViewApplication.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewData["Title"] = "ViewApplication";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/ManagePropertyforOwnerLayout.cshtml";
 }
 
 <h1>ViewApplication</h1>
