--- a/PMS-PropertyHapa.Owner/Views/Landlord/AddLandlord.cshtml
+++ b/PMS-PropertyHapa.Owner/Views/Landlord/AddLandlord.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewData["Title"] = "AddLandlord";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/ManagePropertyforOwnerLayout.cshtml";
 }
 
 <h1>AddLandlord</h1>
