--- a/PMS-PropertyHapa.Owner/Views/Landlord/Index.cshtml
+++ b/PMS-PropertyHapa.Owner/Views/Landlord/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<PMS_PropertyHapa.Models.DTO.OwnerDto>
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/ManagePropertyforOwnerLayout.cshtml";
 }
 
 <!-- Page Sidebar Ends-->
