--- a/PMS-PropertyHapa.Owner/Views/PropertySubTypes/AddPropertySubType.cshtml
+++ b/PMS-PropertyHapa.Owner/Views/PropertySubTypes/AddPropertySubType.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewData["Title"] = Model?.PropertySubTypeId == 0 ? "Add Property Subtype" : "Edit Property Subtype";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/ManagePropertyforOwnerLayout.cshtml";
 }
 <div id="loadingSpinner" class="spinner-border text-primary" role="status" style="display: none;">
     <span class="visually-hidden">Loading...</span>
