--- a/PMS-PropertyHapa.Owner/Views/PropertySubTypes/Index.cshtml
+++ b/PMS-PropertyHapa.Owner/Views/PropertySubTypes/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Property Subtypes";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/ManagePropertyforOwnerLayout.cshtml";
 }
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
