--- a/PMS-PropertyHapa.Owner/Views/UserRoles/Index.cshtml
+++ b/PMS-PropertyHapa.Owner/Views/UserRoles/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<PMS_PropertyHapa.Models.Roles.RoleAsignToUser>
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/ManagePropertyforOwnerLayout.cshtml";
 }
 
 <div class="page-body">
