--- a/PMS-PropertyHapa.Owner/Views/Assests/AddAssest.cshtml
+++ b/PMS-PropertyHapa.Owner/Views/Assests/AddAssest.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewData["Title"] = "AddAssest";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/ManagePropertyforOwnerLayout.cshtml";
 }
 
 <head>
