--- a/PMS-PropertyHapa.Owner/Views/Auth/UpdateProfile.cshtml
+++ b/PMS-PropertyHapa.Owner/Views/Auth/UpdateProfile.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PMS_PropertyHapa.Models.DTO.ProfileModel
 @{
     ViewData["Title"] = "Profile";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/ManagePropertyforOwnerLayout.cshtml";
 }
 <style>
     #profile-picture-container {
