--- a/PMS-PropertyHapa.Owner/Views/Lease/AddLease.cshtml
+++ b/PMS-PropertyHapa.Owner/Views/Lease/AddLease.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewData["Title"] = "AddLease";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/ManagePropertyforOwnerLayout.cshtml";
 }
 
 
