--- a/PMS-PropertyHapa.Owner/Views/Lease/Index.cshtml
+++ b/PMS-PropertyHapa.Owner/Views/Lease/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/ManagePropertyforOwnerLayout.cshtml";
 }
 
 <div class="page-body">
