--- a/PMS-PropertyHapa.Owner/Views/PropertyTypes/Index.cshtml
+++ b/PMS-PropertyHapa.Owner/Views/PropertyTypes/Index.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewData["Title"] = "Property Types";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/ManagePropertyforOwnerLayout.cshtml";
 }
 
 <div class="page-body">
