--- a/PMS-PropertyHapa.Owner/Views/Tenant/AddTenant.cshtml
+++ b/PMS-PropertyHapa.Owner/Views/Tenant/AddTenant.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Add/Edit Tenant";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/ManagePropertyforOwnerLayout.cshtml";
 }
 <div class="page-body">
     <div class="container-fluid">
