--- a/PMS-PropertyHapa.Owner/Views/Tenant/Index.cshtml
+++ b/PMS-PropertyHapa.Owner/Views/Tenant/Index.cshtml
@@ -2,7 +2,7 @@
 @model TenantModelDto
 @{
     ViewData["Title"] = "Tenants";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/ManagePropertyforOwnerLayout.cshtml";
 }
 
 <div class="page-body">
