--- a/PMS-PropertyHapa.Owner/Views/UserRoles/Manage.cshtml
+++ b/PMS-PropertyHapa.Owner/Views/UserRoles/Manage.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<PMS_PropertyHapa.Models.Roles.ManageUserRolesViewModel>
 @{
     ViewData["Title"] = "Manage";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/ManagePropertyforOwnerLayout.cshtml";
 }
 
 <div class="page-body">
